log
Tue, May 13, 2025 12:27:33 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Tue, May 13, 2025 12:34:00 PM: 
 sudoku.c | 28 ++++++++++++++++++++++++----
 1 file changed, 24 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
7d14d67
Tue, May 13, 2025 12:52:53 PM: 
 sudoku.c | 35 ++++++++++++++++++++++++++++-------
 1 file changed, 28 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:9: error: variable 'vacioI' set but not used [-Werror=unused-but-set-variable]
     int vacioI = -1;
         ^~~~~~
cc1.exe: all warnings being treated as errors
c3504b4
Tue, May 13, 2025 12:53:45 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:9: error: variable 'vacioJ' set but not used [-Werror=unused-but-set-variable]
     int vacioJ = -1;
         ^~~~~~
cc1.exe: all warnings being treated as errors
422e582
Tue, May 13, 2025 12:54:17 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:9: error: variable 'vacioJ' set but not used [-Werror=unused-but-set-variable]
     int vacioJ = -1;
         ^~~~~~
cc1.exe: all warnings being treated as errors
a169ec1
Tue, May 13, 2025 12:54:44 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
3ef2a89
Tue, May 13, 2025  1:10:44 PM: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++++++++--
 1 file changed, 36 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
5e9b08c
Tue, May 13, 2025  1:11:08 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f594084
Tue, May 13, 2025  1:12:08 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:117:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return 1;
           ^
cc1.exe: all warnings being treated as errors
57ad75b
Tue, May 13, 2025  1:12:44 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c39baf3
sá., 17 de may. de 2025 16:39:18: 
 sudoku.c | 60 ++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 50 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:93:23: error: expected expression before ')' token
     for(p = 0; p< 9;++)
                       ^
a2c1818
sá., 17 de may. de 2025 16:40:39: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e6c65e3
sá., 17 de may. de 2025 16:42:23: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 30/70
487b0fc
sá., 17 de may. de 2025 16:47:40: 
 sudoku.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
a80200c
sá., 17 de may. de 2025 16:49:07: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|3
total_score: 30/70
abd0e83
sá., 17 de may. de 2025 16:52:32: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
0bdf3c5
sá., 17 de may. de 2025 16:55:01: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:184:24: error: comparison between pointer and integer [-Werror]
   while(is_empty(pila) != NULL)
                        ^~
sudoku.c:197:31: error: comparison between pointer and integer [-Werror]
     while(is_empty(adj_nodes) != NULL)
                               ^~
cc1.exe: all warnings being treated as errors
c422164
sá., 17 de may. de 2025 16:55:35: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
82497d0
sá., 17 de may. de 2025 17:01:25: 
 sudoku.c | 43 +++++++++++++++++++------------------------
 1 file changed, 19 insertions(+), 24 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:140:23: error: passing argument 1 of 'copy' makes pointer from integer without a cast [-Werror=int-conversion]
     Node * new = copy(n);
                       ^
In file included from test.c:5:0:
sudoku.c:15:7: note: expected 'Node * {aka struct <anonymous> *}' but argument is of type 'int'
 Node* copy(Node* n){
       ^~~~
cc1.exe: all warnings being treated as errors
7c95d92
sá., 17 de may. de 2025 17:02:23: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
58cfba1
do., 18 de may. de 2025 15:46:01: 
 sudoku.c | 24 +++++++++++++++++-------
 1 file changed, 17 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:203:17: error: implicit declaration of function 'nex' [-Werror=implicit-function-declaration]
       nodeAdj = nex(adj);
                 ^~~
sudoku.c:203:15: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       nodeAdj = nex(adj);
               ^
cc1.exe: all warnings being treated as errors
13f2dac
do., 18 de may. de 2025 15:47:24: 
 sudoku.c | 20 +++++++++++---------
 1 file changed, 11 insertions(+), 9 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c:115:1: error: "/*" within comment [-Werror=comment]
 /*Recuerde que los nodos adyacentes son generados aplicando las acciones al estado actual.
  
sudoku.c: In function 'get_adj_nodes':
sudoku.c:143:8: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
     if(is_valid(new))
        ^~~~~~~~
test.c: In function 'test_dfs':
test.c:206:19: error: implicit declaration of function 'DFS' [-Werror=implicit-function-declaration]
     Node* final = DFS(initial, &cont);
                   ^~~
test.c:206:19: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     final = DFS(initial, &cont);
           ^
cc1.exe: all warnings being treated as errors
3ff02ed
do., 18 de may. de 2025 15:48:19: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c:115:1: error: "/*" within comment [-Werror=comment]
 /*Recuerde que los nodos adyacentes son generados aplicando las acciones al estado actual.
  
sudoku.c: In function 'get_adj_nodes':
sudoku.c:143:8: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
     if(is_valid(new))
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
70a23b6
do., 18 de may. de 2025 15:48:55: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
8e77284
